--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,27 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col">
+        </div>
+    </div>
+</div>
+{% endblock %}
+
 {% block content %}
+<div class="container h-100">
+    <div class="row h-100">
+        <div class="col-7 col-6-md my-auto">
+            <h1 class="display-4 logo-font text-black">The New collections are here</h1>
+            <div class="my-5">
+                <h4>
+                    <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Join Now</a>
+                </h4>
+            </div>
+        </div>
+    </div>
+</div>
 <h1 class="display-4 text-success">It works!</h1>
 {% endblock %}
