Resolved css issues

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,10 +14,10 @@
 <div class="container h-100">
     <div class="row h-100">
         <div class="col-7 col-6-md my-auto">
-            <h1 class="display-4 logo-font text-black">Huge Variety of Publications here</h1>
+            <h1 class="display-4 logo-font text-white">Huge Variety of Publications here</h1>
             <div class="my-5">
                 <h4>
-                    <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Join Now</a>
+                    <a href="#" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Join Now</a>
                 </h4>
             </div>
         </div>
